[package]
name = "snekgame"
version = "0.1.2"
edition = "2021"
license = "MIT"

readme = "README.md"
description = "Highly customizable, cross-platform, and blazingly fast terminal snake game."
homepage = "https://github.com/blt-r/snekgame"
repository = "https://github.com/blt-r/snekgame"

[dependencies]
clap = { version = "4.5.1", features = ['derive', 'help', 'usage', 'error-context'] }
clap_complete = "4.5.1"
crossterm = "0.28.1"
eyre = "0.6.12"
ndarray = "0.16.1"
rand = "0.8.5"
thiserror = "1.0.57"
